--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GDAX trading monitor",
   "main": "bot.js",
   "scripts": {
-    "test": "node bot.js --config config.xml --run"
+    "test": "node --harmony bot.js --config config.xml --run"
   },
   "keywords": [
     "gdax",
