--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "isonyx",
   "license": "ISC",
   "dependencies": {
+    "babel-register": "^6.26.0",
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
     "npm": "^6.0.1",
