--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "babel": "^6.23.0",
     "babel-register": "^6.26.0",
     "chalk": "^2.4.1",
+    "cli-table": "^0.3.1",
     "commander": "^2.15.1",
+    "gdax": "^0.7.0",
     "npm": "^6.0.1",
     "path": "^0.12.7",
     "yargs": "^11.0.0"
