--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "babel": "^6.23.0",
     "babel-register": "^6.26.0",
-    "chalk": "^2.4.1",
+    "chalk": "^2.4.2",
     "cli-table": "^0.3.1",
     "commander": "^2.15.1",
     "gdax": "^0.7.0",
+    "mathjs": "^5.4.2",
+    "mongodb": "^3.1.13",
     "npm": "^6.0.1",
     "path": "^0.12.7",
     "yargs": "^11.0.0"
