added Discord integration. Fear I may need to actually learn Node soon

--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "NodeJS bot for GDAX",
   "main": "bot.js",
   "dependencies": {
+    "babel-register": "^6.26.0",
     "chalk": "^2.4.2",
+    "coinbase-pro": "^0.9.0",
+    "discord": "^0.8.2",
+    "discord.js": "^11.5.1",
+    "gdax": "^0.9.0",
     "mathjs": "^5.4.2",
-    "mongodb": "^3.1.13"
+    "mongodb": "^3.1.13",
+    "yargs": "^13.3.0"
   },
   "devDependencies": {},
   "scripts": {
