--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord": "^0.8.2",
     "discord.js": "^11.5.1",
     "gdax": "^0.9.0",
+    "geoip-lite": "^1.3.8",
     "mathjs": "^5.4.2",
     "mongodb": "^3.1.13",
     "yargs": "^13.3.0"
